--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,16 +7,18 @@
     "@types/node": "^16.18.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "autoprefixer": "^10.4.0",
+    "axios": "^1.3.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
+    "lucide-react": "^0.263.0",
+    "postcss": "^8.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.0",
-    "axios": "^1.3.0",
-    "lucide-react": "^0.263.0",
     "tailwindcss": "^3.2.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0"
+    "typescript": "^4.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,5 +44,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8000"
-} 
+  "proxy": "http://localhost:8000",
+  "devDependencies": {
+    "@types/jspdf": "^1.3.3"
+  }
+}
