--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,13 @@
   "description": "綜合人格特質分析前端",
   "private": true,
   "dependencies": {
+    "@types/chart.js": "^2.9.41",
     "@types/node": "^16.18.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.0",
     "axios": "^1.3.0",
-    "chart.js": "^4.5.0",
+    "chart.js": "^4.4.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.263.0",
